--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: generic-scratch-rename-sprite
+title: Rename a sprite in Scratch
 hero_image: images/banner.png
-description: generic-scratch-rename-sprite description
+description: Rename a sprite in Scratch
 original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
 theme: red # all possible values: blue, green, navy, orange, red, turquoise, violet, yellow
 duration: 1 # 1, 2 or 3
@@ -8,7 +8,7 @@ listed: false
 ingredient: false
 copyedit: false
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-interests: "games, jokes/pranks, music/sound, photography, physical computing, robots, space"
-technologies: "electronics, html/css, physical computing, python, scratch"
+interests: ""
+technologies: "scratch"
 steps:
-  - title: Step one
+  - title: Rename a sprite
