--- a/pt-BR/meta.yml
+++ b/pt-BR/meta.yml
@@ -1,7 +1,7 @@
 ---
-title: إعادة تسمية الكائن في Scratch
+title: Renomeie um ator no Scratch
 hero_image: images/banner.png
-description: إعادة تسمية الكائن في Scratch
+description: Renomeie um ator no Scratch
 original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
 theme: red
 duration: 1
@@ -12,4 +12,4 @@ curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, commun
 interests: ""
 technologies: "scratch"
 steps:
-  - title: إعادة تسمية الكائن
+  - title: Renomeie um ator
